{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 15,
  "lineage": "7f09a1fe-1f17-5be1-8d6b-a103d2cfaaa7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:948661770994:internet-gateway/igw-057c4d6f729d4aec5",
            "id": "igw-057c4d6f729d4aec5",
            "owner_id": "948661770994",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-igw",
              "Project": "tastylog"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-igw",
              "Project": "tastylog"
            },
            "vpc_id": "vpc-0ae38ae30a064ecd8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt_igw_r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-057c4d6f729d4aec5",
            "id": "r-rtb-04965275c2fcb52551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04965275c2fcb5255",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:948661770994:route-table/rtb-048bd048b142c9018",
            "id": "rtb-048bd048b142c9018",
            "owner_id": "948661770994",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-private-rt",
              "Project": "tastylog",
              "Type": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-private-rt",
              "Project": "tastylog",
              "Type": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae38ae30a064ecd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:948661770994:route-table/rtb-04965275c2fcb5255",
            "id": "rtb-04965275c2fcb5255",
            "owner_id": "948661770994",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-public-rt",
              "Project": "tastylog",
              "Type": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-public-rt",
              "Project": "tastylog",
              "Type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae38ae30a064ecd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027c7efea8db6a083",
            "route_table_id": "rtb-048bd048b142c9018",
            "subnet_id": "subnet-0a05468958ee81719"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d012fe8e7ed13ad7",
            "route_table_id": "rtb-048bd048b142c9018",
            "subnet_id": "subnet-0fd00d9aec372804c"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3e216f1ed66124e",
            "route_table_id": "rtb-04965275c2fcb5255",
            "subnet_id": "subnet-0ded137c4744a72af"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016a0d9ef7adb58ee",
            "route_table_id": "rtb-04965275c2fcb5255",
            "subnet_id": "subnet-0b8762af4e7777292"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:948661770994:subnet/subnet-0a05468958ee81719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a05468958ee81719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948661770994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-private-subnet-1a",
              "Project": "tastylog",
              "Type": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-private-subnet-1a",
              "Project": "tastylog",
              "Type": "private"
            },
            "vpc_id": "vpc-0ae38ae30a064ecd8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:948661770994:subnet/subnet-0fd00d9aec372804c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd00d9aec372804c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948661770994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-private-subnet-1c",
              "Project": "tastylog",
              "Type": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-private-subnet-1c",
              "Project": "tastylog",
              "Type": "private"
            },
            "vpc_id": "vpc-0ae38ae30a064ecd8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:948661770994:subnet/subnet-0ded137c4744a72af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ded137c4744a72af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948661770994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-public-subnet-1a",
              "Project": "tastylog",
              "Type": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-public-subnet-1a",
              "Project": "tastylog",
              "Type": "public"
            },
            "vpc_id": "vpc-0ae38ae30a064ecd8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:948661770994:subnet/subnet-0b8762af4e7777292",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8762af4e7777292",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948661770994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-public-subnet-1c",
              "Project": "tastylog",
              "Type": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-public-subnet-1c",
              "Project": "tastylog",
              "Type": "public"
            },
            "vpc_id": "vpc-0ae38ae30a064ecd8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:948661770994:vpc/vpc-0ae38ae30a064ecd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-0f3bc15d4affcb3ca",
            "default_route_table_id": "rtb-02312d21ee3ef4a13",
            "default_security_group_id": "sg-0bd91315f304d0ba5",
            "dhcp_options_id": "dopt-0c7444dc840ae4974",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ae38ae30a064ecd8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02312d21ee3ef4a13",
            "owner_id": "948661770994",
            "tags": {
              "Env": "dev",
              "Name": "tastylog-dev-vpc",
              "Project": "tastylog"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "tastylog-dev-vpc",
              "Project": "tastylog"
            }
          }
        }
      ]
    }
  ]
}